--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,19 @@ spring.application.name=blackjack-app
 # ========== SERVER ==========
 server.port=9000
 
-# ========== DATASOURCE ==========
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# ============ MONGODB CONFIGURATION ============
+spring.data.mongodb.uri=mongodb://localhost:27017/blackjackdb
+spring.data.mongodb.database=blackjackdb
 
-# ========== JPA ==========
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# ============ POSTGRESQL R2DBC CONFIGURATION ============
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/blackjackdb
+spring.r2dbc.username=postgres
+spring.r2dbc.password=
 
-# ========== SQL INIT ==========
-spring.sql.init.mode=always
+# R2DBC Connections pool:
+spring.r2dbc.pool.enabled=true
+spring.r2dbc.pool.max-size=10
+
+# ============ LOGGING ============
+logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.org.springframework.data.r2dbc=DEBUG
