feature: added Readme file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,42 @@
 spring.application.name=blackjack-app
-# ========== SERVER ==========
-server.port=9000
+server.port=9009
 
-# ============ MONGODB CONFIGURATION ============
-spring.data.mongodb.uri=mongodb://localhost:27017/blackjackdb
+# MongoDB
+spring.data.mongodb.uri=mongodb://mongo:27017/blackjackdb
 spring.data.mongodb.database=blackjackdb
 
-# ============ POSTGRESQL R2DBC CONFIGURATION ============
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/blackjackdb
+# PostgreSQL R2DBC (Reactive)
+spring.r2dbc.url=r2dbc:postgresql://postgres:5432/blackjackdb
 spring.r2dbc.username=postgres
-spring.r2dbc.password=
-
-# R2DBC Connections pool:
+spring.r2dbc.password=password
 spring.r2dbc.pool.enabled=true
-spring.r2dbc.pool.max-size=10
 
-# ============ LOGGING ============
-logging.level.org.springframework.data.mongodb=DEBUG
-logging.level.org.springframework.data.r2dbc=DEBUG
+# PostgreSQL JDBC (Blocking - opcional)
+spring.datasource.url=jdbc:postgresql://postgres:5432/blackjackdb
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+logging.level.root=INFO
+
+# ========== SWAGGER/OPENAPI CONFIGURATION ==========
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/v3/api-docs
+
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.doc-expansion=none
+
+springdoc.cors.enabled=true
+springdoc.swagger-ui.csrf.enabled=false
+
+springdoc.cache.disabled=true
+springdoc.use-management-port=false
+
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
