refactor: refactored mongodb config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,10 @@
 spring.application.name=blackjack-app
 server.port=9009
 
-# MongoDB
-spring.data.mongodb.uri=mongodb://mongo:27017/blackjackdb
-spring.data.mongodb.database=blackjackdb
-
-# PostgreSQL R2DBC (Reactive)
-spring.r2dbc.url=r2dbc:postgresql://postgres:5432/blackjackdb
-spring.r2dbc.username=postgres
-spring.r2dbc.password=password
-spring.r2dbc.pool.enabled=true
-
-# PostgreSQL JDBC (Blocking - opcional)
-spring.datasource.url=jdbc:postgresql://postgres:5432/blackjackdb
-spring.datasource.username=postgres
-spring.datasource.password=password
-
+# Logging
 logging.level.root=INFO
 
-# ========== SWAGGER/OPENAPI CONFIGURATION ==========
-
+# Swagger / OpenAPI
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
