--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,20 @@
-version: '3.8'
-
 services:
   app:
     build: .
     container_name: blackjack-app
     ports:
-      - "9000:9000"
+      - "9009:9009"
     environment:
-      SPRING_R2DBC_URL: r2dbc:postgresql://postgres:5432/blackjackdb
-      SPRING_R2DBC_USERNAME: postgres
-      SPRING_R2DBC_PASSWORD: postgres123
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/blackjackdb
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres123
-      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/blackjackdb
-      SERVER_PORT: 9009
       SPRING_PROFILES_ACTIVE: docker
       JAVA_OPTS: -Xmx512m -Xms256m
     depends_on:
-      - postgres
-      - mongo
+      postgres:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
     networks:
       - blackjack-network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/actuator/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 60s
 
   postgres:
     image: postgres:15-alpine
@@ -63,12 +49,20 @@ services:
       - mongo_data:/data/db
     networks:
       - blackjack-network
-    restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      test:
+        [
+          "CMD",
+          "mongosh",
+          "--username", "admin",
+          "--password", "admin123",
+          "--authenticationDatabase", "admin",
+          "--eval", "db.adminCommand('ping')"
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
 
 networks:
   blackjack-network:
